[MODIFY] Filter list

--- a/ecomm/ecomm/templates/carousel.html
+++ b/ecomm/ecomm/templates/carousel.html
@@ -26,7 +26,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <button type="submit" class="btn btn-success py-2">Apply</button>
+                    <button type="submit" class="btn btn-success py-2">Filter</button>
                 </form>
             </div>
 
@@ -66,7 +66,7 @@
                         <div class="col-md-12">
                             <div class="text-center">
                                 <img src="{% static 'img/product-notfound.png' %}" alt="Icon product not found">
-                                <p><b>No products found.</b></p>
+                                <p><b>Tidak ada produk ditemukan</b></p>
                             </div>
                         </div>
                     {% endif %}
