--- a/ecomm/ecomm/templates/order_detail.html
+++ b/ecomm/ecomm/templates/order_detail.html
@@ -54,23 +54,43 @@
       {% endfor %}
     </tbody>
   </table>
-  {% if request.user.is_staff %}
-  <div class="row mt-3 mb-5">
-    <div class="col">
-      <!-- Button untuk mengubah status -->
-      {% if order.status == 'P' %}
-      <form action="{% url 'toko:update-order-status' order.id %}" method="post">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-success">Kirim</button>
-      </form>
-      {% elif order.status == 'S' %}
-      <form action="{% url 'toko:update-order-status' order.id %}" method="post">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-info">Terima</button>
-      </form>
-      {% endif %}
+  {% if order.payment.status == 'S' %}
+    {% if request.user.is_staff %}
+    <div class="row mt-3 mb-5">
+      <div class="col">
+        <!-- Button untuk mengubah status -->
+        {% if order.status == 'P' %}
+        <form action="{% url 'toko:update-order-status' order.id %}" method="post">
+          {% csrf_token %}
+          <button type="submit" class="btn btn-success">Kirim</button>
+        </form>
+        {% elif order.status == 'S' %}
+        <form action="{% url 'toko:update-order-status' order.id %}" method="post">
+          {% csrf_token %}
+          <button type="submit" class="btn btn-info">Terima</button>
+        </form>
+        {% endif %}
+      </div>
     </div>
+    {% endif %}
+  {% endif %}  
+
+  {% if order.payment.status == 'B' %}
+  <div class="mt-5 text-center">
+      <a href="https://wa.me/6285819581914?text=Hallo%2C%20saya%20{{ user.username|urlencode }}%20sudah%20melakukan%20transfer%20pada%20website%20I-merce.%20Berikut%20Pesanan%20saya%3A%0A%0AID%20pesanan%3A%20{{ order.id }}%0ABarang%3A%0A{% for item in order.produk_items.all %}- {{ item.produk_item.nama_produk|urlencode }}%20(%20Jumlah%20barang%3A%20{{ item.quantity }}%20)%0A{% endfor %}%0ATotal%20harga%3A%20Rp.%20{{ order.get_total_harga_order|currency_idr }}%0A%0ATerima%20Kasih."
+        class="btn btn-success profile-button">
+          <i class="fa fa-whatsapp"></i> Konfirmasi Pembayaran
+      </a>
+  </div>
+  {% elif order.payment.status == 'S' %}
+      <div class="mt-5 text-center">
+      <a href="https://wa.me/6285819581914"
+        class="btn btn-success profile-button">
+          <i class="fa fa-whatsapp"></i> Hubungi Admin
+      </a>
   </div>
   {% endif %}
+
+
 </div>
 {% endblock content %}
