changes english to indo & changes images

--- a/ecomm/ecomm/templates/home.html
+++ b/ecomm/ecomm/templates/home.html
@@ -13,13 +13,13 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="{% static '/img/banner_img_01.jpg' %}" alt="">
+                            <img class="img-fluid" src="{% static '/img/banner_img_01.png' %}" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left align-self-center">
-                                <h1 class="h1 text-success"><b>I-Merce</b> eCommerce</h1>
+                                <h1 class="h1 text-success"><b>Triokarya</b> eCommerce</h1>
                                 <p>
-                                  Unlock Fashion Possibilities with I-MERCE: Where Style Meets Convenience!
+                                    Tempat tinta berkualitas tinggi bertemu dengan kemudahan berbelanja!
                                 </p>
                             </div>
                         </div>
@@ -30,14 +30,15 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="{% static '/img/banner_img_02.jpg' %}" alt="">
+                            <img class="img-fluid" src="{% static '/img/banner_img_02.png' %}" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1">Proident occaecat</h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
+                                <h1 class="h1">Tinta HP Original untuk Kualitas Terbaik!
+                                </h1>
+                                <!-- <h3 class="h2">Aliquip ex ea commodo consequat</h3> -->
                                 <p>
-                                   Curcology is a brand dedicated to harnessing the power of curcumin, the active compound found in turmeric, to provide natural and effective solutions for health and well-being...
+                                    Temukan performa cetak luar biasa dengan tinta HP asli. Hasil tajam dan tahan lama untuk semua kebutuhan pencetakan Anda. Dapatkan sekarang di Toko Tinta Triokarya!!!
                                 </p>
                             </div>
                         </div>
@@ -48,15 +49,14 @@
                 <div class="container">
                     <div class="row p-5">
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="{% static '/img/banner_img_03.jpg' %}" alt="">
+                            <img class="img-fluid" src="{% static '/img/banner_img_03.png' %}" alt="">
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1">Table lamp</h1>
-                                <h3 class="h2">Bright your future </h3>
+                                <h1 class="h1">Tinta Cetak Berkualitas Tinggi</h1>
+                                <!-- <h3 class="h2">Bright your future </h3> -->
                                 <p>
-                                    The table lamp is a versatile and practical lighting solution that effortlessly combines functionality with style. With its compact design, the table lamp fits seamlessly into any space, whether it's your bedroom, living room, or office.
-                                </p>
+                                    Solusi Tepat untuk Kebutuhan Printing Anda dengan berbagai tipe tinta!
                             </div>
                         </div>
                     </div>
@@ -80,24 +80,29 @@
             <div class="col-lg-6 m-auto">
                 <h1 class="h1">Categories of The Month</h1>
                 <p>
-                    Complete your look with our must-have accessories, featuring the latest trends and timeless classics to elevate your style.
+                    Lengkapi kebutuhan Anda dengan produk-produk tinta unggulan kami, dengan hasil percetakan yang maksimal.
                 </p>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-md-4 p-5 mt-3">
-                <a href="#"><img src="{% static '/img/category_img_01.jpg' %}" class="rounded-circle img-fluid border"></a>
-                <h5 class="text-center mt-3 mb-3">Watches</h5>
+            <div class="col-12 col-md-3 p-5 mt-3">
+                <a href="#"><img src="{% static '/img/category_img_01(1).jpg' %}" class="rounded-circle img-fluid border"></a>
+                <h5 class="text-center mt-3 mb-3">HP</h5>
                 <p class="text-center"><a class="btn btn-success" href='/carousel'>Go Shop</a></p>
             </div>
-            <div class="col-12 col-md-4 p-5 mt-3">
-                <a href="#"><img src="{% static '/img/category_img_02.jpg' %}" class="rounded-circle img-fluid border"></a>
-                <h2 class="h5 text-center mt-3 mb-3">Shoes</h2>
+            <div class="col-12 col-md-3 p-5 mt-3">
+                <a href="#"><img src="{% static '/img/category_img_02(1).jpg' %}" class="rounded-circle img-fluid border"></a>
+                <h2 class="h5 text-center mt-3 mb-3">Cannon</h2>
                 <p class="text-center"><a class="btn btn-success" href='/carousel'>Go Shop</a></p>
             </div>
-            <div class="col-12 col-md-4 p-5 mt-3">
-                <a href="#"><img src="{% static '/img/category_img_03.jpg' %}" class="rounded-circle img-fluid border"></a>
-                <h2 class="h5 text-center mt-3 mb-3">Accessories</h2>
+            <div class="col-12 col-md-3 p-5 mt-3">
+                <a href="#"><img src="{% static '/img/category_img_03(1).jpg' %}" class="rounded-circle img-fluid border"></a>
+                <h2 class="h5 text-center mt-3 mb-3">Epson</h2>
+                <p class="text-center"><a class="btn btn-success" href='/carousel'>Go Shop</a></p>
+            </div>
+            <div class="col-12 col-md-3 p-5 mt-3">
+                <a href="#"><img src="{% static '/img/category_img_04.jpg' %}" class="rounded-circle img-fluid border"></a>
+                <h5 class="text-center mt-3 mb-3">Brother</h5>
                 <p class="text-center"><a class="btn btn-success" href='/carousel'>Go Shop</a></p>
             </div>
         </div>
