--- a/ecomm/ecomm/templates/contact.html
+++ b/ecomm/ecomm/templates/contact.html
@@ -6,8 +6,7 @@
         <div class="col-md-6 m-auto text-center">
             <h1 class="h1">Contact Us</h1>
             <p>
-                We appreciate your feedback and suggestions. If you have any comments, ideas, or suggestions to improve our website or services, please let us know. Your input helps us enhance our offerings and provide a better experience for all our customers. 
-                Thank you for choosing Example Store. We look forward to assisting you!
+                Kami menghargai masukan dan saran Anda. Jika Anda memiliki komentar, ide, atau saran untuk memperbaiki situs web atau layanan kami, mohon beri tahu kami. Masukan Anda membantu kami untuk meningkatkan penawaran kami dan memberikan pengalaman yang lebih baik bagi semua pelanggan kami. Terima kasih telah memilih Toko Triokarya. Kami siap membantu Anda!
             </p>
         </div>
     </div>
