--- a/ecomm/ecomm/templates/base.html
+++ b/ecomm/ecomm/templates/base.html
@@ -29,9 +29,9 @@
                 <div>
                     <i class="fa fa-envelope mx-2"></i>
                     <a class="navbar-sm-brand text-light text-decoration-none"
-                        href="mailto:info@company.com">imerce@gmail.com</a>
+                        href="mailto:info@company.com">triokarya87@gmail.com</a>
                     <i class="fa fa-phone mx-2"></i>
-                    <a class="navbar-sm-brand text-light text-decoration-none" href="tel:010-020-0340">010-020-0340</a>
+                    <a class="navbar-sm-brand text-light text-decoration-none" href="tel:087871795391">087871795391</a>
                 </div>
             </div>
         </div>
@@ -44,8 +44,9 @@
         <div class="container d-flex justify-content-between align-items-center">
 
             <a class="navbar-brand text-success logo h1 align-self-center" href="/">
-                I-Merce
+                Triokarya
             </a>
+    
 
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
                 data-bs-target="#templatemo_main_nav" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -165,19 +166,19 @@
             <div class="row">
 
                 <div class="col-md-6 pt-5">
-                    <h2 class="h2 text-success border-bottom pb-3 border-light logo">I-Merce Shop</h2>
+                    <h2 class="h2 text-success border-bottom pb-3 border-light logo">Toko Triokarya</h2>
                     <ul class="list-unstyled text-light footer-link-list">
                         <li>
                             <i class="fas fa-map-marker-alt fa-fw"></i>
-                            Jakarta Pusat
+                            Jakarta Selatan
                         </li>
                         <li>
                             <i class="fa fa-phone fa-fw"></i>
-                            <a class="text-decoration-none" href="tel:010-020-0340">010-020-0340</a>
+                            <a class="text-decoration-none" href="tel:087871795391">087871795391</a>
                         </li>
                         <li>
                             <i class="fa fa-envelope fa-fw"></i>
-                            <a class="text-decoration-none" href="mailto:info@company.com">I-Merce@company.com</a>
+                            <a class="text-decoration-none" href="mailto:info@company.com">triokarya87@gmail.com</a>
                         </li>
                     </ul>
                 </div>
@@ -200,7 +201,7 @@
                 <div class="row pt-2">
                     <div class="col-12">
                         <p class="text-left text-light">
-                            Copyright &copy; 2023 I-Merce
+                            Copyright &copy; 2023 Triokarya
                         </p>
                     </div>
                 </div>
