change english to indo

--- a/ecomm/ecomm/templates/address_list.html
+++ b/ecomm/ecomm/templates/address_list.html
@@ -9,14 +9,14 @@
         <table class="table">
         <thead>
             <tr>
-            <th>Receiver</th>
-            <th>Province</th>
-            <th>Regency</th>
-            <th>Subdistrict</th>
-            <th>Village</th>
-            <th>Zip Code</th>
+            <th>Penerima</th>
+            <th>Provinsi</th>
+            <th>Kabupaten</th>
+            <th>Kecamatan</th>
+            <th>Kelurahan</th>
+            <th>Kode pos</th>
             <th></th>
-            <th>Actions</th>
+            <th>Aksi</th>
             </tr>
         </thead>
         <tbody>
