change english to indo & changes brand images

--- a/ecomm/ecomm/templates/about.html
+++ b/ecomm/ecomm/templates/about.html
@@ -8,7 +8,7 @@
                 <div class="col-md-8 text-white">
                     <h1>About Us</h1>
                     <p>
-                        Welcome to I-MERCE, your ultimate destination for fashion-forward individuals seeking the perfect blend of style, quality, and convenience. At I-MERCE, we specialize in offering a wide range of products, including watches, shoes, and much more, curated to elevate your fashion game and inspire your personal expression
+                        Selamat datang di Triokarya, tempat Anda memenuhi semua kebutuhan percetakan Anda. Didirikan dengan komitmen terhadap kualitas dan kepuasan pelanggan, kami menawarkan berbagai macam tinta dan perlengkapan percetakan berkualitas tinggi untuk penggunaan pribadi maupun bisnis. Tim berpengalaman kami berdedikasi untuk memberikan layanan yang luar biasa, memastikan setiap pelanggan menemukan produk yang tepat untuk proyek percetakannya. Apakah Anda membutuhkan tinta untuk percetakan rumahan atau perlengkapan khusus untuk bisnis Anda, Triokarya hadir untuk memenuhi semua kebutuhan percetakan Anda.
                     </p>
                 </div>
                 <div class="col-md-4">
@@ -27,7 +27,7 @@
                 <div class="col-lg-6 m-auto">
                     <h1 class="h1">Our Brands</h1>
                     <p>
-                        We so honor to mention Our populer brands this month
+                        Merk-merk tinta dengan kualitas terbaik
                     </p>
                 </div>
                 <div class="col-lg-9 m-auto tempaltemo-carousel">
@@ -50,16 +50,16 @@
                                     <div class="carousel-item active">
                                         <div class="row">
                                             <div class="col-3 p-md-5">
-                                                <a href="#"><img class="img-fluid brand-img" src="{% static 'img/brand_01.png' %}" alt="Brand Logo"></a>
+                                                <a href="#"><img class="img-fluid brand-img" src="{% static 'img/brand_01(1).png' %}" alt="Brand Logo"></a>
                                             </div>
                                             <div class="col-3 p-md-5">
-                                                <a href="#"><img class="img-fluid brand-img" src="{% static 'img/brand_02.png' %}" alt="Brand Logo"></a>
+                                                <a href="#"><img class="img-fluid brand-img" src="{% static 'img/brand_02(1).png' %}" alt="Brand Logo"></a>
                                             </div>
                                             <div class="col-3 p-md-5">
-                                                <a href="#"><img class="img-fluid brand-img" src="{% static 'img/brand_03.png' %}" alt="Brand Logo"></a>
+                                                <a href="#"><img class="img-fluid brand-img" src="{% static 'img/brand_03(1).png' %}" alt="Brand Logo"></a>
                                             </div>
                                             <div class="col-3 p-md-5">
-                                                <a href="#"><img class="img-fluid brand-img" src="{% static 'img/brand_04.png' %}" alt="Brand Logo"></a>
+                                                <a href="#"><img class="img-fluid brand-img" src="{% static 'img/brand_04(1).png' %}" alt="Brand Logo"></a>
                                             </div>
                                         </div>
                                     </div>
