change english to indo

--- a/ecomm/ecomm/templates/profile.html
+++ b/ecomm/ecomm/templates/profile.html
@@ -41,12 +41,12 @@
                         </div>
                         <div class="row mt-3">
                             <div class="col-md-12 mt-2">
-                                <label class="labels"><b>Fullname</b></label>
-                                <input type="text" class="form-control" placeholder="Fullname" name="nama" value="{{ user.userprofile.nama }}" required>
+                                <label class="labels"><b>Nama Lengkap</b></label>
+                                <input type="text" class="form-control" placeholder="Nama Lengkap" name="nama" value="{{ user.userprofile.nama }}" required>
                             </div>
                             <div class="col-md-12 mt-2">
-                                <label class="labels"><b>Phone Number</b></label>
-                                <input type="number" class="form-control" placeholder="Enter Phone Number" name="phone_number" value="{{ user.userprofile.phone_number }}" required>
+                                <label class="labels"><b>Nomor Handphone</b></label>
+                                <input type="number" class="form-control" placeholder="Tambahkan nomor handphone" name="phone_number" value="{{ user.userprofile.phone_number }}" required>
                             </div>
                             <div class="col-md-12 mt-2">
                                 <label class="labels"><b>Tanggal Lahir</b></label>
