change english to indo

--- a/ecomm/ecomm/templates/address_list.html
+++ b/ecomm/ecomm/templates/address_list.html
@@ -4,8 +4,8 @@
 
 {% load static %}
     <div class="container mt-5">
-        <h2 class="text-center">My Addresses</h2>
-        <a href="{% url 'toko:address_add' %}" class="btn btn-primary mb-3">Add Address</a>
+        <h2 class="text-center">Alamat Saya</h2>
+        <a href="{% url 'toko:address_add' %}" class="btn btn-primary mb-3">Tambah Alamat</a>
         <table class="table">
         <thead>
             <tr>
