--- a/ecomm/ecomm/templates/order_summary.html
+++ b/ecomm/ecomm/templates/order_summary.html
@@ -21,9 +21,9 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>Product Name</th>
-                        <th class="text-center">Quantity</th>
-                        <th class="text-center">Normal Price</th>
+                        <th>Nama Produk</th>
+                        <th class="text-center">Jumlah</th>
+                        <th class="text-center">Harga Normal</th>
                         <th class="text-center">Diskon</th>
                         <th class="text-center">Subtotal</th>
                         <th class="text-center"></th>
@@ -67,8 +67,7 @@
                     <tr>
                         <td colspan='5' class='text-center'>Keranjang kosong</td>
                     </tr>
-                        <td colspan='5'><a class="btn btn-outline-secondary" href="/carousel"><i class="icon-arrow-left"></i>&nbsp;Back
-                            to Shopping</a></td>
+                        <td colspan='5'><a class="btn btn-outline-secondary" href="/carousel"><i class="icon-arrow-left"></i>&nbsp;Kembali Belanja</a></td>
                     {% endfor %}
                 </tbody>
             </table>
