--- a/ecomm/ecomm/templates/about.html
+++ b/ecomm/ecomm/templates/about.html
@@ -66,7 +66,7 @@
                                     <!--End First slide-->
 
                                     <!--Second slide-->
-                                    <div class="carousel-item">
+                                    <!-- <div class="carousel-item">
                                         <div class="row">
                                             <div class="col-3 p-md-5">
                                                 <a href="#"><img class="img-fluid brand-img" src="{% static 'img/brand_01.png' %}" alt="Brand Logo"></a>
@@ -81,7 +81,7 @@
                                                 <a href="#"><img class="img-fluid brand-img" src="{% static 'img/brand_04.png' %}" alt="Brand Logo"></a>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <!--End Second slide-->
 
                                 </div>
