[INT] List view pengiriman ekternal

--- a/ecomm/ecomm/templates/checkout.html
+++ b/ecomm/ecomm/templates/checkout.html
@@ -97,6 +97,19 @@
                                 <label class="form-check-label" for="{{ value }}">{{ name }}</label>
                             </div>
                             {% endfor %}
+                            {% if shipping_costs %}
+                                <h3>Biaya Pengiriman</h3>
+                                <div class="form-group">
+                                    {% for cost in shipping_costs %}
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="shipping_option" id="shippingOption{{ forloop.counter }}" value="{{ cost.cost }}">
+                                            <label class="form-check-label" for="shippingOption{{ forloop.counter }}">
+                                                {{ cost.courier }} - Service: {{ cost.service }} - Biaya: {{ cost.cost|currency_idr  }} - Estimasi: {{ cost.etd }} hari
+                                            </label>
+                                        </div>
+                                    {% endfor %}
+                                </div>
+                            {% endif %}
                         </div>
 
                         <hr />
